--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -7,10 +7,14 @@
  
    
 }
-.header a {
+.link {
   text-decoration: none;
-  color: 852fb6;
+  color: blueviolet;
   padding-right: 20px;
+}
+.nav .active {
+  color: gold;
+  
 }
 .header nav {
   padding-top: 20px;
